Fixed using the wrong id for multi-scraping [#2673]